--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - Images/
+   - Images/doctor.png
+   - Images/secondblog.png
+
 
   fonts:
      - family: Seg
