--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   device_preview: ^0.4.5
   carousel_slider: ^2.0.0
   shared_preferences: ^0.5.7+3
+  path_provider: ^1.6.11
+  gallery_saver: ^2.0.1
+  url_launcher: ^5.4.11
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
